Fix mobile z-index issue w/ 1.10
The solution CSS was being hidden on mobile since I gave the body a z-index of -1. This wasn't an issue on desktop so I didn't notice until later. Moral of the story, design mobile first.

Update README.md

--- a/battle-one/10.css
+++ b/battle-one/10.css
@@ -2,7 +2,6 @@
     width: 400px;
     height: 300px;
     position: relative;
-    z-index: -2;
 
     background: #62306d;
 }
@@ -16,6 +15,7 @@
     flex-wrap: wrap-reverse;
     justify-content: center;
 }
+
 .ten_spheres div, .ten_cloaks div {
     width: 100px;
     height: 100px;
@@ -25,6 +25,7 @@
     background: #e38f66;
     border: 20px solid #aa445f;
     border-radius: 50%;
+    z-index: 2;
 }
 .ten_spheres div:first-child {
     margin-right: 100px;
@@ -40,5 +41,4 @@
 }
 .ten_cloaks div {
     background: #f7ec7d;
-    z-index: -1;
 }
